--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     position: relative;
   }
 
-  /* ===== Fundo com blur ===== */
   body::before {
     content: "";
     position: fixed;
@@ -33,7 +32,6 @@
     z-index: -1;
   }
 
-  /* ===== Layout principal ===== */
   .layout {
     display: flex;
     flex-direction: row;
@@ -44,7 +42,6 @@
     padding: 40px 20px;
   }
 
-  /* ===== Painel esquerdo ===== */
   .painel {
     display: flex;
     flex-direction: column;
@@ -121,7 +118,6 @@
     font-size: 13px;
   }
 
-  /* ===== Roleta à direita ===== */
   #container {
     position: relative;
     display: flex;
@@ -131,7 +127,7 @@
 
   .seta {
     position: absolute;
-    top: -10px;
+    top: -8px;
     z-index: 20;
     width: 0; height: 0;
     border-left: 20px solid transparent;
@@ -159,7 +155,6 @@
     text-shadow: 0 2px 6px rgba(0,0,0,0.7);
   }
 
-  /* ===== Responsivo ===== */
   @media (max-width: 900px) {
     .layout {
       flex-direction: column;
@@ -172,7 +167,6 @@
 
 <div class="layout">
 
-  <!-- Painel esquerdo -->
   <div class="painel">
     <h1>Roleta de Sorteio</h1>
 
@@ -181,8 +175,32 @@
       <input id="quantidade" type="number" placeholder="quant.vezes" min="1" value="" style="width:80px;">
       <button id="btnAdicionar">Adicionar</button>
       <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;">
-      <button id="btnIniciar">Iniciar</button>
-      <button id="btnParar">Parar</button>
+      <button id="btnIniciar" <button style="
+  background-color: #43a047;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 16px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.3);
+  transition: all 0.2s ease;
+"
+onmouseover="this.style.backgroundColor='#66bb6a'"
+onmouseout="this.style.backgroundColor='#43a047'">Iniciar</button>
+      <button id="btnParar" style="
+  background-color: #e53935;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 16px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.3);
+  transition: all 0.2s ease;
+"
+onmouseover="this.style.backgroundColor='#ff5252'"
+onmouseout="this.style.backgroundColor='#e53935'">Parar</button>
     </div>
 
     <div class="extras">
@@ -195,7 +213,6 @@
     <div id="listaNomes"></div>
   </div>
 
-  <!-- Roleta à direita -->
   <div id="container">
     <div class="seta"></div>
     <canvas id="roleta"></canvas>
@@ -241,7 +258,43 @@ document.getElementById('btnParar').onclick=()=>{if(girando){clearInterval(intv)
 document.getElementById('btnLimpar').onclick=limpar;
 nome.addEventListener('keyup',e=>{if(e.key==='Enter')adicionar();});
 document.getElementById('btnImportar').onclick=()=>csv.click();
-csv.addEventListener('change',()=>{const f=csv.files[0];if(!f)return;const r=new FileReader();r.onload=e=>{const t=e.target.result;const arr=t.split(/[\n,;]/).map(v=>v.trim()).filter(v=>v);nomes=arr;cores=arr.map(()=>corAleatoria());salvar();desenhar();atualizar();alert(`Importados ${arr.length} nomes.`);};r.readAsText(f);});
+
+/* === Importação CSV: ler a SEGUNDA coluna === */
+csv.addEventListener('change', () => {
+  const f = csv.files[0];
+  if (!f) return;
+
+  const reader = new FileReader();
+  reader.onload = e => {
+    const text = e.target.result;
+    const linhas = text.split(/\r?\n/).map(l => l.trim()).filter(l => l);
+
+    const nomesImportados = [];
+    for (let linha of linhas) {
+      const partes = linha.split(',');
+      const nome = partes[1]?.trim(); // segunda coluna
+      if (nome && !nomesImportados.includes(nome)) {
+        nomesImportados.push(nome);
+      }
+    }
+
+    if (nomesImportados.length === 0) {
+      alert("Nenhum nome encontrado na segunda coluna do CSV.");
+      return;
+    }
+
+    nomes = nomesImportados;
+    cores = nomes.map(() => corAleatoria());
+    salvar();
+    desenhar();
+    atualizar();
+
+    alert(`🎉 Importados ${nomes.length} nomes da segunda coluna do CSV.`);
+  };
+
+  reader.readAsText(f);
+});
+
 document.getElementById('btnExportar').onclick=()=>{if(!nomes.length){alert('Nenhum nome para exportar.');return;}const csvTxt=nomes.join("\n");const blob=new Blob([csvTxt],{type:"text/csv;charset=utf-8"});const url=URL.createObjectURL(blob);const a=document.createElement("a");a.href=url;a.download="nomes_roleta.csv";a.click();URL.revokeObjectURL(url);};
 window.remover=remover;
 ajustarCanvas();
