--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <input id="nome" type="text" placeholder="Digite um nome">
       <input id="quantidade" type="number" placeholder="quant.vezes" min="1" value="1" style="width:80px;">
       <button id="btnAdicionar">Adicionar</button>
-      <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;" value="5">
+      <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;" value="">
       <button id="btnIniciar" style="background-color:#43a047;color:#fff;">Iniciar</button>
       <button id="btnParar" style="background-color:#e53935;color:#fff;">Parar</button>
     </div>
