--- a/index.html
+++ b/index.html
@@ -5,190 +5,79 @@
 <title>Roleta de Sorteio</title>
 <style>
   :root { --accent: #61dafb; }
-
   body {
-    margin: 0;
-    min-height: 100vh;
+    margin: 0; min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    color: #fff;
-    overflow-y: auto;
-    overflow-x: hidden;
-    position: relative;
-    background:#111;
+    color: #fff; background:#111; overflow-x: hidden; position: relative;
   }
-
   body::before {
-    content: "";
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
+    content: ""; position: fixed; inset: 0;
     background: url('https://raw.githubusercontent.com/luyan-tamec/roleta-leoeisa/refs/heads/main/d9da3fab-4aec-408c-b01c-8df60aefe6e5.png') center/cover no-repeat;
-    filter: blur(6px) brightness(0.8);
-    z-index: -2;
+    filter: blur(8px) brightness(0.6); z-index: -2;
   }
   body::after {
-    content: "";
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: -1;
+    content: ""; position: fixed; inset: 0;
+    background: rgba(0,0,0,0.5); z-index: -1;
   }
-
-  .layout {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 40px;
-    padding: 40px 20px;
-  }
-
-  .painel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 380px;
-    width: 100%;
-  }
-
-  h1 {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 10px;
-    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
-  }
-
-  .controls, .extras {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    justify-content: center;
-    margin-bottom: 15px;
-  }
-
+  .layout { display: flex; flex-wrap: wrap; justify-content: center; align-items: flex-start; gap: 40px; padding: 40px 20px; }
+  .painel { display: flex; flex-direction: column; align-items: center; max-width: 380px; width: 100%; }
+  h1 { font-size: 2rem; margin-bottom: 10px; text-align: center; text-shadow: 0 2px 6px rgba(0,0,0,0.7); }
+  .controls, .extras { display: flex; flex-wrap: wrap; gap: 8px; justify-content: center; margin-bottom: 15px; }
   input[type="text"], input[type="number"], select {
-    padding: 10px 12px;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    font-size: 15px;
-    flex: 1 1 auto;
-    min-width: 100px;
-    max-width: 180px;
+    padding: 10px 12px; border-radius: 8px; border: none; outline: none; font-size: 15px;
   }
-
   button {
-    padding: 10px 14px;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-    background: var(--accent);
-    color: #000;
-    font-weight: 700;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    transition: transform .12s ease;
+    padding: 10px 14px; border-radius: 8px; border: none; cursor: pointer;
+    background: var(--accent); color: #000; font-weight: 700;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3); transition: transform .12s ease;
   }
   button:hover { transform: translateY(-2px); }
-
-  #listaNomes {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 6px;
-    justify-content: center;
-    margin: 10px 0 20px;
-  }
+  #listaNomes { display: flex; flex-wrap: wrap; gap: 6px; justify-content: center; margin: 10px 0 20px; }
   .tagNome {
-    background: rgba(255,255,255,0.08);
-    border: 1px solid rgba(255,255,255,0.15);
-    border-radius: 12px;
-    padding: 6px 10px;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    font-size: 15px;
+    background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.15);
+    border-radius: 12px; padding: 6px 10px; display: flex; align-items: center; gap: 6px;
   }
   .tagNome button {
-    background: #e53935;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    cursor: pointer;
-    font-size: 13px;
+    background: #e53935; color: #fff; border: none; border-radius: 50%;
+    width: 20px; height: 20px; font-size: 13px; padding: 0; cursor: pointer;
   }
-
-  #container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
+  #container { position: relative; display: flex; justify-content: center; align-items: center; }
   .seta {
-    position: absolute;
-    top: -8px;
-    z-index: 20;
-    width: 0; height: 0;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-top: 35px solid #e53935;
-    filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.4));
+    position: absolute; top: -8px; z-index: 20;
+    width: 0; height: 0; border-left: 20px solid transparent;
+    border-right: 20px solid transparent; border-top: 35px solid #e53935;
   }
-
   canvas {
-    border-radius: 50%;
-    border: 5px solid #fff;
-    background: rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    width: min(90vw, 500px);
-    aspect-ratio: 1 / 1;
-    height: auto;
-    display: block;
+    border-radius: 50%; border: 5px solid #fff; width: min(90vw, 500px); aspect-ratio: 1 / 1;
+    background: rgba(0,0,0,0.1); box-shadow: 0 0 20px rgba(0,0,0,0.4);
   }
-
-  /* Nome vencedor sobre a roleta */
   #resultadoOverlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.8);
-    background: rgba(0, 0, 0, 0.65);
-    padding: 16px 28px;
-    border-radius: 18px;
-    font-size: 2rem;
-    font-weight: 800;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 3px 8px rgba(0,0,0,0.9);
-    opacity: 0;
-    z-index: 30;
-    pointer-events: none;
-    transition: opacity 0.45s ease, transform 0.45s ease;
-    white-space: nowrap;
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%) scale(0.8);
+    background: rgba(0,0,0,0.65); padding: 16px 28px; border-radius: 18px;
+    font-size: 2rem; font-weight: 800; color: #fff; text-shadow: 0 3px 8px rgba(0,0,0,0.9);
+    opacity: 0; transition: opacity .45s ease, transform .45s ease; z-index: 30; pointer-events: none;
   }
-  #resultadoOverlay.mostrar {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-
-  @media (max-width: 900px) {
+  #resultadoOverlay.mostrar { opacity: 1; transform: translate(-50%,-50%) scale(1); }
+  @media (max-width: 900px){
     .layout { flex-direction: column; align-items: center; }
     #resultadoOverlay { font-size: 1.4rem; padding: 10px 16px; }
+  }
+  .musica {
+    opacity: 1;
+    transform: scale(1);
+    background-color: orange
   }
 </style>
 </head>
 <body>
 
 <div class="layout">
-
   <div class="painel">
     <h1>Roleta de Sorteio</h1>
 
     <div class="controls">
       <input id="nome" type="text" placeholder="Digite um nome">
-      <input id="quantidade" type="number" placeholder="quant.vezes" min="1" value="1" style="width:80px;">
+      <input id="quantidade" type="number" min="1" value="1" style="width:80px;">
       <button id="btnAdicionar">Adicionar</button>
       <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;" value="">
       <button id="btnIniciar" style="background-color:#43a047;color:#fff;">Iniciar</button>
@@ -207,6 +96,11 @@
       <button id="btnExportar">📤 Exportar CSV</button>
       <button id="btnFullscreen">🖥️ Tela Cheia</button>
       <button id="btnLimpar">🧹 Limpar Tudo</button>
+      <button class="musica" id="btnMusica">🎵 Tocar Música</button>
+      <label style="display:flex;align-items:center;gap:6px;color:#ccc;">
+        🔊
+        <input type="range" id="volumeMusica" min="0" max="100" value="50" style="width:100px;">
+      </label>
     </div>
 
     <div id="listaNomes"></div>
@@ -217,7 +111,6 @@
     <canvas id="roleta"></canvas>
     <div id="resultadoOverlay"></div>
   </div>
-
 </div>
 
 <script>
@@ -227,36 +120,119 @@ tempo=document.getElementById('tempo'),overlay=document.getElementById('resultad
 lista=document.getElementById('listaNomes'),csv=document.getElementById('inputCSV');
 let nomes=[],cores=[],angulo=0,girando=false,vel=0,intv,dur=5000,ultimo=null,audioCtx=null;
 
-function ajustarCanvas(){const tamanho=Math.min(window.innerWidth*0.8,700);canvas.width=tamanho;canvas.height=tamanho;desenhar();}
-window.addEventListener('resize',ajustarCanvas);
+/* Sons da roleta */
+function ensureAudioContext(){
+  if(!audioCtx) audioCtx=new(window.AudioContext||window.webkitAudioContext)();
+  if(audioCtx.state==='suspended') audioCtx.resume();
+}
+function playTick(){
+  try{ensureAudioContext();
+    const o=audioCtx.createOscillator(),g=audioCtx.createGain();
+    o.type='square';o.frequency.setValueAtTime(1200,audioCtx.currentTime);
+    g.gain.setValueAtTime(0,audioCtx.currentTime);
+    g.gain.linearRampToValueAtTime(0.12,audioCtx.currentTime+0.001);
+    g.gain.exponentialRampToValueAtTime(0.001,audioCtx.currentTime+0.07);
+    o.connect(g);g.connect(audioCtx.destination);o.start();o.stop(audioCtx.currentTime+0.08);
+  }catch(e){}
+}
+function playStopSound(){
+  try{ensureAudioContext();
+    const o=audioCtx.createOscillator(),g=audioCtx.createGain();
+    o.type='sine';o.frequency.setValueAtTime(400,audioCtx.currentTime);
+    o.frequency.linearRampToValueAtTime(900,audioCtx.currentTime+0.06);
+    g.gain.setValueAtTime(0.0001,audioCtx.currentTime);
+    g.gain.exponentialRampToValueAtTime(0.2,audioCtx.currentTime+0.02);
+    g.gain.exponentialRampToValueAtTime(0.0001,audioCtx.currentTime+1.2);
+    o.connect(g);g.connect(audioCtx.destination);o.start();o.stop(audioCtx.currentTime+1.25);
+  }catch(e){}
+}
 
-function ensureAudioContext(){if(!audioCtx)audioCtx=new(window.AudioContext||window.webkitAudioContext)();if(audioCtx.state==='suspended')audioCtx.resume();}
-function playTick(){try{ensureAudioContext();const o=audioCtx.createOscillator(),g=audioCtx.createGain();o.type='square';o.frequency.setValueAtTime(1200,audioCtx.currentTime);g.gain.setValueAtTime(0,audioCtx.currentTime);g.gain.linearRampToValueAtTime(0.12,audioCtx.currentTime+0.001);g.gain.exponentialRampToValueAtTime(0.001,audioCtx.currentTime+0.07);o.connect(g);g.connect(audioCtx.destination);o.start();o.stop(audioCtx.currentTime+0.08);}catch(e){}}
-function playStopSound(){try{ensureAudioContext();const o=audioCtx.createOscillator(),g=audioCtx.createGain();o.type='sine';o.frequency.setValueAtTime(400,audioCtx.currentTime);o.frequency.linearRampToValueAtTime(900,audioCtx.currentTime+0.06);g.gain.setValueAtTime(0.0001,audioCtx.currentTime);g.gain.exponentialRampToValueAtTime(0.2,audioCtx.currentTime+0.02);g.gain.exponentialRampToValueAtTime(0.0001,audioCtx.currentTime+1.2);o.connect(g);g.connect(audioCtx.destination);o.start();o.stop(audioCtx.currentTime+1.25);}catch(e){}}
+/* Música personalizada */
+const musica=new Audio('musica.mp3');musica.loop=true;
+const volSalvo=localStorage.getItem('volumeMusica');
+if(volSalvo)musica.volume=parseFloat(volSalvo);
+document.getElementById('volumeMusica').value=musica.volume*2000;
+let tocandoMusica=false;
+document.getElementById('btnMusica').onclick=()=>{
+  if(!tocandoMusica){
+    musica.currentTime=0;
+    musica.play().then(()=>{
+      tocandoMusica=true;
+      document.getElementById('btnMusica').textContent='⏸️ Parar Música';
+    }).catch(console.log);
+  }else{
+    musica.pause();tocandoMusica=false;
+    document.getElementById('btnMusica').textContent='🎵 Tocar Música';
+  }
+};
+document.getElementById('volumeMusica').oninput=e=>{
+  const vol=e.target.value/2000;musica.volume=vol;localStorage.setItem('volumeMusica',vol);
+};
+
+/* Funções principais */
 function corAleatoria(){return`hsl(${Math.floor(Math.random()*360)},75%,60%)`;}
 function salvar(){localStorage.setItem('roleta_nomes',JSON.stringify(nomes));localStorage.setItem('roleta_cores',JSON.stringify(cores));}
 function carregar(){const n=JSON.parse(localStorage.getItem('roleta_nomes')||'[]'),c=JSON.parse(localStorage.getItem('roleta_cores')||'[]');nomes=n;cores=c.length===n.length?c:n.map(()=>corAleatoria());desenhar();atualizar();}
+function ajustarCanvas(){const t=Math.min(window.innerWidth*0.8,700);canvas.width=t;canvas.height=t;desenhar();}
+window.addEventListener('resize',ajustarCanvas);
 function atualizar(){lista.innerHTML='';nomes.forEach((nm,i)=>{const d=document.createElement('div');d.className='tagNome';d.innerHTML=`${nm} <button onclick="remover(${i})">×</button>`;lista.appendChild(d);});}
 function remover(i){nomes.splice(i,1);cores.splice(i,1);salvar();desenhar();atualizar();}
 function adicionar(){const n=nome.value.trim();let q=parseInt(qtd.value)||1;if(!n){alert('Digite um nome.');return;}for(let i=0;i<q;i++){nomes.push(n);cores.push(corAleatoria());}nome.value='';qtd.value=1;salvar();desenhar();atualizar();}
 function desenhar(d=-1,b=1){const w=canvas.width,h=canvas.height,cx=w/2,cy=h/2,r=Math.min(w,h)/2-6;ctx.clearRect(0,0,w,h);const t=nomes.length;if(!t){ctx.beginPath();ctx.arc(cx,cy,r,0,2*Math.PI);ctx.lineWidth=6;ctx.strokeStyle='#fff';ctx.stroke();return;}const ap=2*Math.PI/t;for(let i=0;i<t;i++){const ini=angulo+i*ap;ctx.beginPath();ctx.moveTo(cx,cy);ctx.arc(cx,cy,r,ini,ini+ap);ctx.closePath();ctx.fillStyle=(i===d)?`rgba(255,255,0,${b})`:cores[i];ctx.fill();ctx.strokeStyle='#222';ctx.lineWidth=1;ctx.stroke();ctx.save();ctx.translate(cx,cy);ctx.rotate(ini+ap/2);ctx.textAlign='right';ctx.fillStyle='#000';let nm=nomes[i];ctx.font=`bold ${(nm.length>18)?12:16}px Arial`;if(nm.length>24)nm=nm.slice(0,21)+'...';ctx.fillText(nm,r-45,8);ctx.restore();}ctx.beginPath();ctx.arc(cx,cy,r,0,2*Math.PI);ctx.lineWidth=5;ctx.strokeStyle='#fff';ctx.stroke();}
-function girar(){if(nomes.length<1){alert('Adicione pelo menos um nome.');return;}ensureAudioContext();if(girando)return;overlay.classList.remove('mostrar');dur=(parseInt(tempo.value)||5)*1000;vel=Math.random()*0.35+0.5;girando=true;ultimo=null;const ini=Date.now();intv=setInterval(()=>{const d=Date.now()-ini;if(d<dur*0.65)angulo+=vel;else if(d<dur)vel*=0.98,angulo+=vel;else{clearInterval(intv);suave();return;}tick();desenhar();},18);}
+function tick(){const t=nomes.length;if(!t)return;const ap=2*Math.PI/t,arrow=3*Math.PI/2,rel=((arrow-angulo)%(2*Math.PI)+2*Math.PI)%(2*Math.PI),s=Math.floor(rel/ap);if(ultimo===null){ultimo=s;return;}if(s!==ultimo){playTick();ultimo=s;}}
+function girar(){if(nomes.length<1){alert('Adicione pelo menos um nome.');return;}if(girando)return;overlay.classList.remove('mostrar');dur=(parseInt(tempo.value)||5)*1000;vel=Math.random()*0.35+0.5;girando=true;ultimo=null;const ini=Date.now();intv=setInterval(()=>{const d=Date.now()-ini;if(d<dur*0.65)angulo+=vel;else if(d<dur){vel*=0.98;angulo+=vel;}else{clearInterval(intv);suave();return;}tick();desenhar();},18);}
 function suave(){let step=()=>{vel*=0.96;if(vel<0.0005)vel=0;angulo+=vel;tick();desenhar();if(vel>0)requestAnimationFrame(step);else{girando=false;const t=nomes.length,ap=2*Math.PI/t,arrow=3*Math.PI/2,rel=((arrow-angulo)%(2*Math.PI)+2*Math.PI)%(2*Math.PI),i=Math.floor(rel/ap);const v=nomes[i];playStopSound();destacar(i);mostrarVencedor(v);}};requestAnimationFrame(step);}
 function destacar(i){let b=1,d=true,rp=0;function anim(){desenhar(i,b);if(d)b-=0.1;else b+=0.1;if(b<=0.3){d=false;rp++;}if(b>=1&&!d){d=true;}if(rp<3)requestAnimationFrame(anim);else desenhar();}requestAnimationFrame(anim);}
-function tick(){const t=nomes.length;if(!t)return;const ap=2*Math.PI/t,arrow=3*Math.PI/2,rel=((arrow-angulo)%(2*Math.PI)+2*Math.PI)%(2*Math.PI),s=Math.floor(rel/ap);if(ultimo===null){ultimo=s;return;}if(s!==ultimo){playTick();ultimo=s;}}
 function mostrarVencedor(nm){overlay.textContent=`🎉 ${nm} 🎉`;overlay.classList.remove('mostrar');void overlay.offsetWidth;overlay.classList.add('mostrar');clearTimeout(overlay._timeoutId);overlay._timeoutId=setTimeout(()=>{overlay.classList.remove('mostrar');overlay.textContent='';},10000);}
 function limpar(){if(!confirm('Tem certeza que deseja limpar tudo?'))return;nomes=[];cores=[];localStorage.clear();desenhar();atualizar();overlay.classList.remove('mostrar');}
+
+/* Importar / Exportar CSV */
+document.getElementById('btnImportar').onclick = () => csv.click();
+csv.addEventListener('change', () => {
+  const f = csv.files[0]; if (!f) return;
+  const colIndex = parseInt(document.getElementById('colunaCSV').value);
+  const reader = new FileReader();
+  reader.onload = e => {
+    const text = e.target.result;
+    const linhas = text.split(/\r?\n/).map(l => l.trim()).filter(l => l);
+    const nomesImportados = [];
+    for (const linha of linhas) {
+      const partes = linha.split(',');
+      const nome = (partes[colIndex] || '').trim();
+      if (nome) nomesImportados.push(nome);
+    }
+    if (!nomesImportados.length) { alert('Nenhum nome encontrado.'); return; }
+    nomes = nomesImportados.slice();
+    cores = nomes.map(() => corAleatoria());
+    salvar(); desenhar(); atualizar();
+    alert(`🎉 Importados ${nomes.length} nomes da coluna ${colIndex + 1}.`);
+  };
+  reader.readAsText(f);
+});
+document.getElementById('btnExportar').onclick = () => {
+  if (!nomes.length) { alert('Nenhum nome para exportar.'); return; }
+  const colIndex = parseInt(document.getElementById('colunaCSV').value);
+  const linhas = nomes.map(n => { const cols = Array(colIndex + 1).fill(''); cols[colIndex] = n; return cols.join(','); });
+  const csvTxt = linhas.join('\n');
+  const blob = new Blob([csvTxt], { type: "text/csv;charset=utf-8" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  a.href = url; a.download = "nomes_roleta.csv"; a.click();
+  URL.revokeObjectURL(url);
+};
+
+/* Eventos */
 document.getElementById('btnAdicionar').onclick=adicionar;
 document.getElementById('btnIniciar').onclick=girar;
 document.getElementById('btnParar').onclick=()=>{if(girando){clearInterval(intv);suave();}};
 document.getElementById('btnLimpar').onclick=limpar;
 nome.addEventListener('keyup',e=>{if(e.key==='Enter')adicionar();});
-document.getElementById('btnImportar').onclick=()=>csv.click();
-csv.addEventListener('change',()=>{const f=csv.files[0];if(!f)return;const colIndex=parseInt(document.getElementById('colunaCSV').value);const reader=new FileReader();reader.onload=e=>{const text=e.target.result;const linhas=text.split(/\r?\n/).map(l=>l.trim()).filter(l=>l);const nomesImportados=[];for(const linha of linhas){const partes=linha.split(',');const nome=(partes[colIndex]||'').trim();if(nome)nomesImportados.push(nome);}if(nomesImportados.length===0){alert(`Nenhum nome encontrado na coluna ${colIndex+1}.`);return;}nomes=nomesImportados;cores=nomes.map(()=>corAleatoria());salvar();desenhar();atualizar();alert(`🎉 Importados ${nomes.length} nomes da coluna ${colIndex+1} do CSV.`);};reader.readAsText(f);});
-document.getElementById('btnExportar').onclick=()=>{if(!nomes.length){alert('Nenhum nome para exportar.');return;}const colIndex=parseInt(document.getElementById('colunaCSV').value);const linhas=nomes.map(n=>{const cols=Array(colIndex+1).fill('');cols[colIndex]=n;return cols.join(',');});const csvTxt=linhas.join('\n');const blob=new Blob([csvTxt],{type:"text/csv;charset=utf-8"});const url=URL.createObjectURL(blob);const a=document.createElement("a");a.href=url;a.download="nomes_roleta.csv";a.click();URL.revokeObjectURL(url);};
 document.getElementById('btnFullscreen').onclick=()=>{if(!document.fullscreenElement){document.documentElement.requestFullscreen();}else{document.exitFullscreen();}};
 document.addEventListener('fullscreenchange',ajustarCanvas);
-window.remover=remover;ajustarCanvas();carregar();
+
+window.remover=remover;
+ajustarCanvas();
+carregar();
 </script>
 </body>
 </html>
