Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="layout">
   <div class="painel">
-    <h1>Roleta de Sorteio Rindo e Apoiando!!!</h1>
+    <h1>ROLETA RINDO E APOIANDO!!!</h1>
 
     <div class="controls">
       <select id="modoCor">
