--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <title>Roleta de Sorteio</title>
+  <title>Roleta Rindo e Apoiando!</title>
   <link rel="stylesheet" href="style.css">
   <style>
     /* Botão no canto esquerdo */
