--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
 <div class="layout">
   <div class="painel">
-    <h1>ROLETA RINDO E APOIANDO!!!</h1>
+    <h1 id="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
 
     <div class="controls">
+      
+      <button id="btnTema" >Tema</button>
       <select id="modoCor">
       <option value="colorido" selected>🏳‍🌈 cores do vale</option>
       <option value="neutro">⚪ cores Neutras</option>
