--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   </div>
   <div class="layout">
     <div class="painel">
-      <h1 id="titulo" style="margin:20px">Roleta <strong style="color: rgb(25, 94, 191);">Rindo</strong><strong style="color: rgb(143, 210, 222);">e</strong><strong style="color: rgba(181, 11, 125, 0.495);">Apoiando!!</strong></h1>
+      <h1 id="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
       <div class="cartao">
         <div class="controls">
-          <button id="btnTema">Tema</button>
+          <button id="btnTema">Tema</button>  
           <select id="modoCor">
             <option value="colorido" selected>🏳‍🌈 cores do vale</option>
             <option value="neutro">⚪ cores Neutras</option>
