--- a/SorteadorTwitch.html
+++ b/SorteadorTwitch.html
@@ -211,13 +211,13 @@
       position: fixed;
       top: 20px;
       left: 20px;
-      padding: 10px 14px;
-      background: #1976d2;
+      padding: 10px 10px;
+      background: rgba(30, 33, 207, 0.5);
       color: #fff;
       text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      border-radius: 15px;
+      font-size: 14px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       z-index: 9999;
     }
   </style>
