--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       color: #fff;
       text-decoration: none;
       border-radius: 15px;
-      font-size: 14px;
+      font-size: 10px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       z-index: 9999;
     }
@@ -30,7 +30,7 @@
       color: #fff;
       text-decoration: none;
       border-radius: 15px;
-      font-size: 14px;
+      font-size: 10px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       z-index: 9999;
     }
@@ -48,8 +48,8 @@
 
 <body>
   <div class="botoesmenu">
-    <a id="btnLeft" href="index2.html">Roleta com chat</a>
-    <a id="btnLeft2" href="SorteadorTwitch.html">sorteador com chat</a>
+    <a id="btnLeft" href="index2.html">Roleta com captura de chat</a>
+    <a id="btnLeft2" href="SorteadorTwitch.html">sorteador com captura de chat</a>
   </div>
   <div class="layout">
     <div class="painel">
