--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 </head>
 
 <body>
-  <div class="botoesmenu">
+  <!--<div class="botoesmenu">
     <a id="btnLeft" href="index2.html">Roleta com captura de chat</a>
     <a id="btnLeft2" href="SorteadorTwitch.html">sorteador com captura de chat</a>
-  </div>
+  </div>-->
   <div class="layout">
     <div class="painel">
       <h1 id="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
