--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <input id="quantidade" type="number" min="1" value="" placeholder="quantidade" style="width:80px;">
           <button id="btnAdicionar">Adicionar</button>
           <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;">
-          <button clase="btnembaralhar" id="btnEmbaralhar">🔀 Embaralhar</button>
+          <button class="btnembaralhar" id="btnEmbaralhar">🔀 Embaralhar</button>
           <button id="btnIniciar" style="background-color:#43a047;color:#fff;">Iniciar</button>
           <button id="btnParar" style="background-color:#e53935;color:#fff;">Parar</button>
         </div>
