--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       margin: 20px;
     }
     .btnembaralhar {
-      background-color: yellow;
+      background-color: pink;
       
     }
     
