Change button background color from purple to blue

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       margin: 20px;
     }
     .btnembaralhar {
-      background-color: purple;
+      background-color: blue;
       
     }
     
