--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       margin: 20px;
     }
     .btnembaralhar {
-      background-color: blue;
+      background-color: blue,0.2;
       
     }
     
