--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       margin: 20px;
     }
     .btnembaralhar {
-      background-color: blue,0.2;
+      background-color:  rgba(219, 109, 14, 0.854);
       
     }
     
