--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     }
 
     .cartao {
-      background-color: rgba(16, 10, 10, 0.300);
-      border: solid 2px rgba(174, 159, 159, 0.795);
+      background-color: rgba(0, 0, 0, 0.526);
+      border: solid 1px rgba(174, 159, 159, 0.795);
       border-radius: 30px;
       margin: 20px;
     }
@@ -53,6 +53,58 @@
       background-color: rgba(219, 109, 14, 0.854);
 
     }
+
+    .centro {
+      position: absolute;
+      width: 70px;
+      height: 70px;
+      border: #ffffff solid 1px;
+      border-radius: 50%;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      transition: width 0.25s ease, height 0.25s ease;
+      filter: opacity(0.8);
+
+    }
+
+
+
+    .centrochat {
+      background-color: rgb(255, 255, 255, 0.8);
+      position: absolute;
+      width: 300px;
+      height: 110px;
+      border: #050505 solid 2px;
+      border-radius: 10%;
+      left: 50%;
+      top: 90%;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      transition: width 0.25s ease, height 0.25s ease;
+    }
+
+    #chatBox {
+      display: none;
+    }
+
+    iframe {
+      width: 100%;
+    }
+
+    .blocoessencial {
+      background-color: rgba(204, 38, 38, 0);
+      border: solid 4px rgb(255, 255, 255,0.2);
+      border-radius: 30px;
+      padding: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: center;
+      margin-bottom: 15px;
+      margin: 1px;
+    }
   </style>
 </head>
 
@@ -66,19 +118,24 @@
       <h1 id="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
       <div class="cartao">
         <div class="controls">
+
           <button id="btnTema">Tema</button>
           <select id="modoCor">
             <option value="colorido" selected>🏳‍🌈 cores do vale</option>
             <option value="neutro">⚪ cores Neutras</option>
           </select>
-          <input id="nome" type="text" placeholder="Digite um nome">
-          <input id="quantidade" type="number" min="1" value="" placeholder="quantidade" style="width:80px;">
-          <button id="btnAdicionar">Adicionar</button>
-          <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;">
-          <button class="btnembaralhar" id="btnEmbaralhar">🔀 Embaralhar</button>
-          <button id="btnIniciar" style="background-color:#43a047;color:#fff;">Iniciar</button>
-          <button id="btnParar" style="background-color:#e53935;color:#fff;">Parar</button>
+          <button id="toggleChat">Mostrar Chat</button>
+          <div class="blocoessencial">
+            <input id="nome" type="text" placeholder="Digite um nome">
+            <input id="quantidade" type="number" min="1" value="" placeholder="quantidade" style="width:80px;">
+            <button id="btnAdicionar">Adicionar</button>
+            <input id="tempo" type="number" min="1" placeholder="Tempo (seg)" style="width:110px;">
+            <button class="btnembaralhar" id="btnEmbaralhar">🔀 Embaralhar</button>
+            <button id="btnIniciar" style="background-color:#43a047;color:#fff;">Iniciar</button>
+            <button id="btnParar" style="background-color:#e53935;color:#fff;">Parar</button>
+          </div>
         </div>
+
 
         <div class="extras">
           <input type="file" id="inputCSV" accept=".csv" style="display:none;">
@@ -103,8 +160,9 @@
           </label>
           <label style="display:flex;align-items:center;gap:6px;color:#ccc;">
             🔔vol.seta----
-            <input type="range" id="volTick" min="0" max="10" value="1" style="width:120px;">
+            <input type="range" id="volTick" min="0" max="10" value="10" style="width:120px;">
           </label>
+
         </div>
       </div>
       <div id="ultimosVencedores">
@@ -117,16 +175,48 @@
         <div id="listaNomes"></div>
       </div>
 
+
     </div>
 
     <div id="container">
       <div class="seta"></div>
       <canvas id="roleta"></canvas>
+      <img src="centro.png" class="centro" />
+      <div id="chatBox">
+        <iframe class="centrochat" src="chat.html" frameborder="0"></iframe>
+      </div>
       <div id="resultadoOverlay"></div>
     </div>
   </div>
 
   <script src="script.js"></script>
+  <script>
+    const toggleBtn = document.getElementById('toggleChat');
+    const chatBox = document.getElementById('chatBox');
+
+    // Estado inicial explícito
+    let chatVisivel = false;
+
+    toggleBtn.addEventListener('click', () => {
+      chatVisivel = !chatVisivel;
+
+      if (chatVisivel) {
+        chatBox.style.display = 'block';
+        toggleBtn.textContent = 'Esconder Chat';
+        document.getElementById('titulo').textContent = 'Carregando chat';
+
+
+        setInterval(() => {
+          document.getElementById('titulo').textContent = 'Roleta Rindo e Apoiando!!';
+        }, 2000);
+
+      } else {
+        chatBox.style.display = 'none';
+        toggleBtn.textContent = 'Mostrar Chat';
+      }
+    });
+  </script>
+
 
 </body>
 
