--- a/chat.html
+++ b/chat.html
@@ -75,7 +75,7 @@
 <body>
     <div id="chat-box"></div>
 
-<script src="http://luyan-tamec.github.io/roleta-isaeleo/tmi.min.js"></script>
+<script src="tmi.min.js"></script>
 <script>
 /* ================================
        CONFIGURAÇÃO DA TWITCH
@@ -149,3 +149,4 @@ function convertEmotes(message) {
 </script>
 </body>
 </html>
+
