--- a/chat.html
+++ b/chat.html
@@ -80,7 +80,7 @@
 /* ================================
        CONFIGURAÇÃO DA TWITCH
 ================================= */
-const canal = "loud_coringa";  // <<< coloque seu canal aqui
+const canal = "isaroza_";  // <<< coloque seu canal aqui
 
 /* ================================
        CONEXÃO COM O TMI.JS
@@ -149,4 +149,5 @@ function convertEmotes(message) {
 </script>
 </body>
 </html>
+
 
