--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       transform: translate(-50%, -50%);
       pointer-events: none;
       transition: width 0.25s ease, height 0.25s ease;
-      
+
 
     }
 
@@ -95,7 +95,7 @@
 
     .blocoessencial {
       background-color: rgba(204, 38, 38, 0);
-      border: solid 4px rgb(255, 255, 255,0.2);
+      border: solid 4px rgb(255, 255, 255, 0.2);
       border-radius: 30px;
       padding: 10px;
       display: flex;
@@ -116,7 +116,7 @@
   <div class="layout">
     <div class="painel">
       <h1 id="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
-      <div class="cartao">
+      <div class="cartao" id="painel">
         <div class="controls">
 
           <button id="btnTema">Tema</button>
@@ -215,6 +215,8 @@
         toggleBtn.textContent = 'Mostrar Chat';
       }
     });
+    
+
   </script>
 
 
