--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
       if (chatVisivel) {
         chatBox.style.display = 'block';
-        toggleBtn.textContent = 'Esconder Chat';
+        toggleBtn.textContent = 'Escon. Chat';
 
       } else {
         chatBox.style.display = 'none';
