--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="painel">
 
       <div class="cartao" id="painel">
-        <h1 id="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
+        <h1 id="titulo" class="titulo" style="margin:20px">Roleta Rindo e Apoiando!!</h1>
 
         <div class="controls">
           <button id="btnOcultarPainel" style="height: 38px;">🙈 Ocultar Painel</button>
